              It's use by default by the new installations.
        * Opportunities :
            - You can now create unsuccessful phone calls from an Opportunity's detail-view :
                - A button has been added (not enabled in default installations).
                - In the block "Linked Contacts", you can activate an new action in the configuration (idem).

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The method 'creme_core.core.entity_cell.EntityCellCustomField.build()' with integer "value" is deprecated;
              pass a string (ID ou UUID) instead.
            - The method 'creme_core.models.creme_property.CremePropertyTypeManager.smart_update_or_create() is deprecated;
              use the classical methods 'create()' or 'update_or_create()' instead.
              Notice: if you still want to set the field "subject_ctypes" from models like before,
                      you can use the new method 'CremePropertyType.set_subject_ctypes()'.
            - The method 'creme_core.tests.base._CremeTestCase.assertRelationCount' is deprecated;
              use the new methods 'assertHaveRelation()' & 'assertHaveNoRelation()' instead.
            - App :
                * Activities :
                    - The constants 'NARROW', 'FLOATING_TIME' & 'FLOATING' are now deprecated;
                      use 'Activity.FloatingType.*' instead.
        # The model 'creme_core.models.FileRef' get a new optional field "description";
          it's used by the new view which displays all FileRefs (so feel free to fill it).
        # Apps :
            * Persons :
                - The model 'Address' gets new semantic fields (like ZipCodeField) which allow to
                  easily customise things (like the form field, the field printer etc...).

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :