@@ -1,0 +1,1 @@
+{% include 'django/forms/widgets/input.html' %}<span class="percent-widget-marker">%</span>
